# Omni

./: .env  .env.example  README.md  claude.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/: routes_health.py  routes_products.py
backend/app/core/: config.py  errors.py  logging.py  scheduler.py
backend/app/db/: models.py  seed.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_create_initial_tables.py  0002_enable_bestbuy_retailer.py  0003_add_predictions_model_registry.py
backend/app/ml_runtime/: model_loader.py  predictor.py
backend/app/schemas/: errors.py  product.py
backend/app/services/: prediction_service.py  price_service.py  product_service.py  recommendation_service.py
backend/tests/integration/: test_routes_products.py
backend/tests/unit/: test_product_service.py  test_recommendation_service.py  test_schemas.py
extension/: package-lock.json  package.json  tsconfig.json
extension/.plasmo/: chrome-mv3.plasmo.manifest.json
extension/.plasmo/cache/parcel/: data.mdb  lock.mdb
extension/src/: declarations.d.ts  popup.css  popup.tsx
extension/src/components/: RecommendationCard.tsx  recommendation.css
extension/src/contents/: amazon.ts  bestbuy.ts
extension/src/utils/: apiClient.ts  retailerDetection.ts
ml/: requirements.txt
ml/notebooks/: 01_data_quality_eda.ipynb  02_price_behavior_eda.ipynb  03_feature_target_analysis.ipynb
ml/src/: build_features.py  create_labels.py  db_utils.py  evaluate.py  train.py
